<resources>
    <!-- GENERAL -->
    <string name="app_name">TrainBetter</string>

    <string name="workout_activity">Workouts</string>

    <string name="meta_parse_application_id">barassistent</string>
    <string name="meta_parse_application_url">http://134.103.176.138:1337/parse/</string> <!-- http://134.103.176.138:1337/parse/ -->

    <string name="username">Username</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>

    <!-- MENU -->
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_next_image">Next image</string>
    <string name="action_previous_image">Previous image</string>

    <!-- FRAGMENT TITLE -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Strings related to login -->
    <string name="error_invalid_username">This username is too short</string>
    <string name="error_invalid_email">The email is not valid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_user_not_exists">Either the user does not exist or the password is wrong</string>
    <string name="error_user_exists">The user already exists</string>

    <string name="success_loggedin_signedup">Successfully %1$s!</string>
    <string name="success_loggedin">logged in</string>
    <string name="success_signedup">signed up</string>

    <!-- Units -->
    <string name="seconds">Seconds</string>
    <string name="seconds_short">Sec</string>
    <string name="repetitions">Repetitions</string>
    <string name="repetition">Repetition</string>
    <string name="repetitions_short">Reps</string>
    <string name="repetition_short">Reps</string>
    <string name="sets">Sets</string>
    <string name="set">Set</string>
    <string name="exercises">Exercises</string>
    <string name="exercise">Exercise</string>
    <string name="rounds">Rounds</string>
    <string name="round">Round</string>

    <string name="pause_between_rounds">Pause between rounds</string>
    <string name="pause_between_exercises">Pause between exercises</string>
    <string name="pause_between_sets">Pause between sets</string>
    <string name="description">Description</string>
    <string name="pause">Pause</string>
    <string name="get_ready_for_workout">Get ready for the workout!</string>
    <string name="get_ready_for">Get ready for the next <b>%1$s</b>!</string>
</resources>
