<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f6f7fb"
    android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/title_image"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                app:layout_collapseMode="parallax" />
            <!--
            <ImageView
                android:id="@+id/title_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />-->

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false">

            <LinearLayout
                android:id="@+id/details_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="16px"
                android:elevation="4dp"
                android:background="@color/colorPrimaryTextLight">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/description"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:includeFontPadding="false"/>

                    <TextView
                        android:id="@+id/workout_description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorSecondaryTextDark"
                        android:includeFontPadding="false"/>

                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/workout_rounds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/colorSecondaryTextDark"
                        android:includeFontPadding="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/rounds"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:includeFontPadding="false"
                        android:layout_alignBaseline="@id/workout_rounds"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/workout_pause_between_exercises"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorSecondaryTextDark"
                        android:layout_alignParentRight="true"
                        android:includeFontPadding="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/pause_between_exercises"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:includeFontPadding="false"
                        android:layout_alignBaseline="@id/workout_pause_between_exercises"/>

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/workout_pause_between_rounds"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/colorSecondaryTextDark"
                        android:includeFontPadding="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/pause_between_rounds"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:includeFontPadding="false"
                        android:layout_alignBaseline="@id/workout_pause_between_rounds"/>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/workout_pause_between_sets_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <TextView
                        android:id="@+id/workout_pause_between_sets"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:layout_alignParentRight="true"
                        android:textColor="@color/colorSecondaryTextDark"
                        android:includeFontPadding="false"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:text="@string/pause_between_sets"
                        android:textColor="@color/colorPrimaryTextDark"
                        android:includeFontPadding="false"
                        android:layout_alignBaseline="@id/workout_pause_between_sets"/>

                </RelativeLayout>

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                android:id="@+id/recycer_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/exercises_text"
                android:background="@color/colorPrimaryTextLight"
                android:layout_margin="16px"
                android:elevation="4dp"
                android:clipToPadding="false"/>

            <TextView
                android:id="@id/exercises_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/exercises"
                android:textColor="@color/colorPrimaryTextDark"
                android:includeFontPadding="false"
                android:padding="16dp"
                android:layout_below="@+id/details_wrapper"
                android:layout_alignStart="@+id/details_wrapper" />

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        app:elevation="6dp"
        android:tint="@android:color/white"
        android:clickable="true"
        android:onClick="startWorkout"
        app:layout_behavior="inf.reutlingenuniversity.de.trainbetter.behavior.FabScrollBehavior"
        android:layout_margin="16dp"
        android:src="@drawable/ic_play_arrow_white_24dp"/>
    <!--
            app:rippleColor="@color/red_A100"
            app:backgroundTint="@color/red_A500"
            -->

</android.support.design.widget.CoordinatorLayout>

    <!--
    <?xml version="1.0" encoding="utf-8"?>
    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/content_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:elevation="4dp"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </android.support.design.widget.AppBarLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycer_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>

    </android.support.design.widget.CoordinatorLayout>
    -->